Refactor components and add Open Graph to posts

--- a/the-box-timer/index.html
+++ b/the-box-timer/index.html
@@ -6,27 +6,25 @@
     <meta name="author" content="Edvin Lindén"/>
     <meta name="description" content="The Box Timer is a free and simple workout timer app for your iPhone. It&#39;s perfect for workouts at home, outside or at your box. It supports any WOD such as AMRAP, EMOM or Tabata."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "SoftwareApplication",
-        "name": "The Box Timer",
-        "operatingSystem": "IOS",
-        "applicationCategory": "HealthApplication",
-        "aggregateRating": {
-          "@type": "AggregateRating",
-          "ratingValue": "4.8",
-          "ratingCount": "151"
-        },
-        "offers": {
-          "@type": "Offer",
-          "price": "0",
-          "priceCurrency": "USD"
+    <meta name="viewport" content="width=device-width,initial-scale=1"/><script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "SoftwareApplication",
+          "name": "The Box Timer",
+          "operatingSystem": "IOS",
+          "applicationCategory": "HealthApplication",
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "ratingCount": "151"
+          },
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
         }
-      }
-    </script>
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+      </script><link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <style>
       /* latin-ext */
       @font-face {
