--- a/writing/what-i-learned-by-launching-my-first-app/index.html
+++ b/writing/what-i-learned-by-launching-my-first-app/index.html
@@ -6,8 +6,12 @@
     <meta name="author" content="Edvin Lindén"/>
     <meta name="description" content="The story about what I learned by launching my first app – The Box Timer."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/><meta property="og:title" content="What I learned by launching my first app"/>
+      <meta property="og:description" content="The story about what I learned by launching my first app – The Box Timer."/>
+      <meta property="og:type" content="article"/>
+      <meta property="og:image" content="https://edvinlinden.se/images/the-box-timer/app-preview-1.webp"/>
+      <meta property="og:url" content="https://edvinlinden.se/writing/what-i-learned-by-launching-my-first-app/">
+      <meta name="twitter:card" content="summary_large_image"/><link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <style>
       /* latin-ext */
       @font-face {
