--- a/writing/index.html
+++ b/writing/index.html
@@ -6,8 +6,7 @@
     <meta name="author" content="Edvin Lindén"/>
     <meta name="description" content="Things written by Edvin Lindén, mostly about side projects such as app development."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <style>
       /* latin-ext */
       @font-face {
