Add post about goodbye

--- a/writing/be-polite-say-goodbye/index.html
+++ b/writing/be-polite-say-goodbye/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Things I&#39;ve written – Edvin Lindén</title>
+    <title>Be polite, say goodbye! – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="Things written by Edvin Lindén, mostly about side projects such as app development."/>
+    <meta name="description" content="Offboard your visitors the right way, say goodbye or thank them for their visit."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/><meta property="og:title" content="Be polite, say goodbye!"/>
+      <meta property="og:description" content="Offboard your visitors the right way, say goodbye or thank them for their visit."/>
+      <meta property="og:type" content="article"/>
+      <meta property="og:image" content="https://edvinlinden.se/images/goodbye/goodbye.webp"/>
+      <meta property="og:url" content="https://edvinlinden.se/writing/be-polite-say-goodbye/">
+      <meta name="twitter:card" content="summary_large_image"/><link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <style>
       /* latin-ext */
       @font-face {
@@ -48,18 +53,13 @@
     </div>
 </div>
 
-  <h1>Things I&#39;ve written</h1>
-  <ul><li>
-            <h2 class="mb-0">
-                <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
-            </h2>
-            31 januari 2022
-        </li><li>
-            <h2 class="mb-0">
-                <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
-            </h2>
-            10 juli 2021
-        </li></ul>
+    <h1 class="mb-2 text-center sm:text-left">Be polite, say goodbye!</h1>
+    <div class="mb-8 text-xs text-center sm:text-left">31 januari 2022</div>
+    <p>A few days ago when going through <a href="https://dribbble.com/" target="_blank" rel="noopener noreferrer">dribble</a> I found <a href="https://www.kshitij.ws/" target="_blank" rel="noopener noreferrer">Kshitij</a>. His site had a feature that has been stuck in my head, he said goodbye when I left his site. I know – 🤯</p>
+<p>So how did he do it? He used a thing we all hate about the web, the <i>&quot;Subscribe for 10% off your next purchase!&quot;</i> popup. Or as we call it in the industry, an exit intent popup. But he used it with no other purpose than to say goodbye, and that's really nice!</p>
+<p>I've implemented a version of it on my site as well, you can see how it works by moving your mouse outside of the browser window. If you are reading this on a phone, here is a GIF showing it in action.
+<img src="/images/goodbye/goodbye-preview.gif" width="600" height="385" class="my-8 mx-auto shadow-2lg" /></p>
+
 
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
   <div>
