--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Home – Edvin Lindén</title>
+    <title>About – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
     <meta name="description" content="Edvin Lindén is a Product Manager at Fortnox that spends his time outside work creating things for digital devices."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
@@ -47,38 +47,19 @@
     </div>
 </div>
 
-  <h1 class="font-sans font-normal text-2xl mb-4">
-I work as a product manager at <a href="https://fortnox.se" target="_blank" title="Fortnox" rel="noopener noreferrer">Fortnox</a>, however this is a place for my side projects.
-</h1>
+  <h1>Hi!</h1>
+  <p>My name is Edvin and I enjoy all things product management, suffering during long CrossFit workouts and creating things online.</p>
+<h3>What I do for work</h3>
+<p>I am a product leader at <a href="https://fortnox.se" target="_blank" title="Fortnox" rel="noopener noreferrer">Fortnox</a>, making products that help businesses become more successful.</p>
+<h3>I write things (sometimes)</h3>
+<p>During 2022 I want to write more, both for myself and others. I am not sure what I will write about, but so far I've written about <a href="/writing/what-i-learned-by-launching-my-first-app/" title="What I learned by launching my first app">making my first app</a> and <a href="/writing/be-polite-say-goodbye/" title="Be polite, say goodbye!">using exit intent popups for a good purpose</a>.</p>
+<h3>Side projects</h3>
+<ul class="ml-6 list-disc">
+    <li><a href="/the-box-timer/" title="The Box Timer">The Box Timer - A workout timer for iPhone</a></li>
+    <li><a href="/the-impossible-safe/" title="The Impossible Safe">The Impossible Safe - A safe cracking game for iPhone</a></li>
+</ul>
 
 
-<h2>Highlights</h2>
-
-<div class="flex flex-wrap justify-between items-start">
-
-    <a href="/the-impossible-safe" class="rounded-xl w-full md:w-[344px] h-[172px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent">
-        <img 
-            src="/images/the-impossible-safe-cover.webp"
-            class="object-cover w-full h-full z-0"
-            alt="The Impossible Safe - Cover Image"
-            title="The Impossible Safe"
-/>
-        <div class="flex flex-col justify-end w-full h-full bg-black bg-opacity-50 text-stone-50 p-4 z-10 absolute top-0 left-0 opacity-100 md:opacity-0 hover:opacity-100 transition-all">
-            A safe cracking game on iPhone inspired by a Apple Watch game.
-        </div>
-    </a>
-    <a href="/the-box-timer" class="rounded-xl w-full md:w-[344px] h-[172px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent">
-        <img 
-            src="/images/theboxtimer.webp"
-            class="object-cover w-full h-full z-0"
-            alt="The Impossible Safe - Cover Image"
-            title="The Impossible Safe"
-/>
-        <div class="flex flex-col justify-end w-full h-full bg-black bg-opacity-50 text-stone-50 p-4 z-10 absolute top-0 left-0 opacity-100 md:opacity-0 hover:opacity-100 transition-all">
-            A workout timer for iPhone that's just a timer and not bloated with other stuff.
-        </div>
-    </a>
-</div>
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
   <div>
     <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
