--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>The Impossible Safe – Privacy Policy – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content=""/>
+    <meta name="description" content="How I handle your data when using The Impossible Safe."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <style>
@@ -41,10 +41,9 @@
       <div class="flex flex-col md:flex-row justify-between items-center mb-16">
     <a href="/" class="font-heading text-2xl no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">Edvin Lindén</a>
     <div class="mt-8 md:mt-0">
-        
         <a href="/" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">home</a>
-        <a href="/writing" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
-        
+        <a href="/writing" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
+        <a href="/about" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">about</a>
     </div>
 </div>
 
