--- a/writing/be-polite-say-goodbye/index.html
+++ b/writing/be-polite-say-goodbye/index.html
@@ -46,10 +46,9 @@
       <div class="flex flex-col md:flex-row justify-between items-center mb-16">
     <a href="/" class="font-heading text-2xl no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">Edvin Lindén</a>
     <div class="mt-8 md:mt-0">
-        
         <a href="/" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">home</a>
-        <a href="/writing" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
-        
+        <a href="/writing" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
+        <a href="/about" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">about</a>
     </div>
 </div>
 
@@ -58,7 +57,7 @@
     <p>A few days ago when going through <a href="https://dribbble.com/" target="_blank" rel="noopener noreferrer">dribbble</a> I found <a href="https://www.kshitij.ws/" target="_blank" rel="noopener noreferrer">Kshitij</a>. His site had a feature that has been stuck in my head, he said goodbye when I left his site. I know – 🤯</p>
 <p>So how did he do it? He used a thing we all hate about the web, the <i>&quot;Subscribe for 10% off your next purchase!&quot;</i> popup. Or as we call it in the industry, an exit intent popup. But he used it with no other purpose than to say goodbye, and that's really nice!</p>
 <p>I've implemented a version of it on my site as well, you can see how it works by moving your mouse outside of the browser window. If you are reading this on a phone, here is a GIF showing it in action.
-<img src="/images/goodbye/goodbye-preview.gif" width="600" height="385" class="my-8 mx-auto shadow-2lg" /></p>
+<img src="/images/goodbye/goodbye-preview.gif" width="600" height="385" class="my-8 mx-auto shadow-2lg" alt="GIF showing the goodbye feature on exit intent" /></p>
 
 
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
