--- a/writing/index.html
+++ b/writing/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Things I&#39;ve written – Edvin Lindén</title>
+    <title>Writing – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
     <meta name="description" content="Things written by Edvin Lindén, mostly about side projects such as app development."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
@@ -41,10 +41,9 @@
       <div class="flex flex-col md:flex-row justify-between items-center mb-16">
     <a href="/" class="font-heading text-2xl no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">Edvin Lindén</a>
     <div class="mt-8 md:mt-0">
-        
         <a href="/" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">home</a>
-        <a href="/writing" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
-        
+        <a href="/writing" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
+        <a href="/about" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">about</a>
     </div>
 </div>
 
