Add post about IKEA

--- a/writing/what-i-learned-by-launching-my-first-app/index.html
+++ b/writing/what-i-learned-by-launching-my-first-app/index.html
@@ -53,7 +53,7 @@
 </div>
 
     <h1 class="mb-2 text-center sm:text-left">What I learned by launching my first app</h1>
-    <div class="mb-8 text-xs text-center sm:text-left">10 juli 2021</div>
+    <div class="mb-8 text-xs text-center sm:text-left">July 10, 2021</div>
     <p>Ever since I started to learn how to build things for computers I have followed blogs, newsletters and forums where people make incredible <em>things</em>.</p>
 <p>Some <em>things</em> are just for fun, like Rafael Conde's <a href="http://breakthissafe.com/" target="_blank" rel="noopener noreferrer">Break This Safe</a> that inspired my own game <a href="https://apps.apple.com/us/app/the-impossible-safe/id1573468310" target="_blank" rel="noopener noreferrer">The Impossible Safe</a>, and others are the start of new businesses.</p>
 <p>I've always watched these people with a feeling of &quot;I want to do that, I want to make <em>things</em>&quot;. However this year something changed. It went from feelings to actions to an actual launched app.</p>
