--- a/writing/you-dont-notice-the-best-product-design-from-IKEA/index.html
+++ b/writing/you-dont-notice-the-best-product-design-from-IKEA/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Writing – Edvin Lindén</title>
+    <title>You don&#39;t notice the best product design from IKEA – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="Things written by Edvin Lindén, mostly about side projects such as app development."/>
+    <meta name="description" content="Why the design of a product that you don&#39;t see is so important."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/><meta property="og:title" content="You don&#39;t notice the best product design from IKEA"/>
+      <meta property="og:description" content="Why the design of a product that you don&#39;t see is so important."/>
+      <meta property="og:type" content="article"/>
+      <meta property="og:image" content="https://edvinlinden.se/images/writing/vidga-hooks.png"/>
+      <meta property="og:url" content="https://edvinlinden.se/writing/you-dont-notice-the-best-product-design-from-IKEA/">
+      <meta name="twitter:card" content="summary_large_image"/><link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <style>
       /* latin-ext */
       @font-face {
@@ -47,23 +52,18 @@
     </div>
 </div>
 
-  <h1>Things I&#39;ve written</h1>
-  <ul><li>
-            <h2 class="mb-0">
-                <a href="/writing/you-dont-notice-the-best-product-design-from-IKEA/">You don&#39;t notice the best product design from IKEA</a>
-            </h2>
-            March 7, 2022
-        </li><li>
-            <h2 class="mb-0">
-                <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
-            </h2>
-            January 31, 2022
-        </li><li>
-            <h2 class="mb-0">
-                <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
-            </h2>
-            July 10, 2021
-        </li></ul>
+    <h1 class="mb-2 text-center sm:text-left">You don&#39;t notice the best product design from IKEA</h1>
+    <div class="mb-8 text-xs text-center sm:text-left">March 7, 2022</div>
+    <p>A few weeks ago I bought a set of <a href="https://www.ikea.com/us/en/p/vidga-glider-with-hook-white-20483002/" target="_blank" rel="noopener noreferrer">Vidga Glider with hook</a>, the exact same as I did a year ago – or so I thought.</p>
+<p>They did the same thing and fit the same Vidga tracks as before, but sometime in the past year or so the design changed. A subtle change but I bet it's quite a big one for IKEA and it's manufacturers.</p>
+<img src="/images/writing/vidga-hooks.png" width="407" height="242" class="mt-8 mb-2 mx-auto shadow-2lg rounded-md" alt="Image of the IKEA Vidga glider with hook" />
+<div class="text-xs text-center italic mb-8">Left: Vidga glider with hook late 2020, right: Vidga glider with hook early 2022.</div>
+<p>Each pack contains 24 pieces and each piece is about a centimeter wide. That means IKEA needs to manufacture a lot of these small gliders.</p>
+<p>The product from late 2020 have eight individual parts including small plastic wheels and metal shafts. In early 2022 the product only have two, the glider and the hook, both in plastic.</p>
+<p>For me, the customer, nothing have changed – my curtains still works just as good as before. But for IKEA the product have become a lot simpler to manufacture and therefore cheaper.</p>
+<p>That's what makes it <mark>great product design</mark> and often something that goes unnoticed in todays digital world.</p>
+<p>Making products is complicated and expensive, making them simpler and cheaper without compromising on customer value is something that we all should strive for.</p>
+
 
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
   <div>
