Fix href to not redirect from https://url/path to https://url/path/

--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -42,8 +42,8 @@
     <a href="/" class="font-heading text-2xl no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">Edvin Lindén</a>
     <div class="mt-8 md:mt-0">
         <a href="/" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">home</a>
-        <a href="/writing" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
-        <a href="/about" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">about</a>
+        <a href="/writing/" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
+        <a href="/about/" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">about</a>
     </div>
 </div>
 
@@ -90,7 +90,7 @@
   <div>
     <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
       <a
-          href="/privacy"
+          href="/privacy/"
           title="Privacy"
           class="no-underline font-heading"
           >privacy</a
