--- a/the-box-timer/index.html
+++ b/the-box-timer/index.html
@@ -60,8 +60,8 @@
     <a href="/" class="font-heading text-2xl no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">Edvin Lindén</a>
     <div class="mt-8 md:mt-0">
         <a href="/" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">home</a>
-        <a href="/writing" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
-        <a href="/about" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">about</a>
+        <a href="/writing/" class="font-heading no-underline mr-4 font-bold hover:font-bold text-stone-800 dark:text-stone-300">writing</a>
+        <a href="/about/" class="font-heading no-underline font-bold hover:font-bold text-stone-800 dark:text-stone-300">about</a>
     </div>
 </div>
 
@@ -274,7 +274,7 @@ Whether you are into functional fitness, weight lifting, stretching of any other
   <div>
     <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
       <a
-          href="/privacy"
+          href="/privacy/"
           title="Privacy"
           class="no-underline font-heading"
           >privacy</a
