Add related articles to the footer of articles

--- a/writing/be-polite-say-goodbye/index.html
+++ b/writing/be-polite-say-goodbye/index.html
@@ -59,10 +59,18 @@
 <p>I've implemented a version of it on my site as well, you can see how it works by moving your mouse outside of the browser window. If you are reading this on a phone, here is a GIF showing it in action.
 <img src="/images/goodbye/goodbye-preview.gif" width="600" height="385" class="my-8 mx-auto shadow-2lg" alt="GIF showing the goodbye feature on exit intent" /></p>
 
+<div class="mx-auto my-16 w-full h-[1px] bg-stone-400 dark:bg-stone-700"></div>
+<h2>Continue reading</h2>
 
-<footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
+    <a href="/writing/you-dont-notice-the-best-product-design-from-IKEA/">You don&#39;t notice the best product design from IKEA</a>
+    <div class="text-xs mb-4">March 7, 2022</div>
+
+    <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
+    <div class="text-xs mb-4">July 10, 2021</div>
+
+<footer class="mt-24 pt-8 border-t-[1px] border-stone-400 dark:border-stone-700">
   <div>
-    <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
+    <p class="text-center mb-12 text-stone-400 dark:text-stone-700">
       <a
           href="/privacy/"
           title="Privacy"
