--- a/writing/you-dont-notice-the-best-product-design-from-IKEA/index.html
+++ b/writing/you-dont-notice-the-best-product-design-from-IKEA/index.html
@@ -64,10 +64,18 @@
 <p>That's what makes it <mark>great product design</mark> and often something that goes unnoticed in todays digital world.</p>
 <p>Making products is complicated and expensive, making them simpler and cheaper without compromising on customer value is something that we all should strive for.</p>
 
+<div class="mx-auto my-16 w-full h-[1px] bg-stone-400 dark:bg-stone-700"></div>
+<h2>Continue reading</h2>
 
-<footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
+    <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
+    <div class="text-xs mb-4">January 31, 2022</div>
+
+    <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
+    <div class="text-xs mb-4">July 10, 2021</div>
+
+<footer class="mt-24 pt-8 border-t-[1px] border-stone-400 dark:border-stone-700">
   <div>
-    <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
+    <p class="text-center mb-12 text-stone-400 dark:text-stone-700">
       <a
           href="/privacy/"
           title="Privacy"
