--- a/writing/what-i-learned-by-launching-my-first-app/index.html
+++ b/writing/what-i-learned-by-launching-my-first-app/index.html
@@ -100,10 +100,18 @@
 <p>It's really hard to get people to use your <em>thing</em>! But the feeling you get when they do is amazing.</p>
 <p>Interested in the app I made? It's called <a href="https://apps.apple.com/us/app/the-box-timer/id1547518531">The Box Timer</a></p>
 
+<div class="mx-auto my-16 w-full h-[1px] bg-stone-400 dark:bg-stone-700"></div>
+<h2>Continue reading</h2>
 
-<footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
+    <a href="/writing/you-dont-notice-the-best-product-design-from-IKEA/">You don&#39;t notice the best product design from IKEA</a>
+    <div class="text-xs mb-4">March 7, 2022</div>
+
+    <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
+    <div class="text-xs mb-4">January 31, 2022</div>
+
+<footer class="mt-24 pt-8 border-t-[1px] border-stone-400 dark:border-stone-700">
   <div>
-    <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
+    <p class="text-center mb-12 text-stone-400 dark:text-stone-700">
       <a
           href="/privacy/"
           title="Privacy"
