Add posts to startpage

--- a/index.html
+++ b/index.html
@@ -58,29 +58,40 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" titl
 
 <div class="flex flex-wrap justify-between items-start">
 
-    <a href="/the-impossible-safe" class="rounded-xl w-full md:w-[344px] h-[172px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent">
+    <a href="/the-impossible-safe" class="rounded-md w-full md:w-[344px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent no-underline">
         <img 
             src="/images/the-impossible-safe-cover.webp"
-            class="object-cover w-full h-full z-0"
+            class="object-cover w-full md:h-[172px]"
             alt="The Impossible Safe - Cover Image"
             title="The Impossible Safe"
 />
-        <div class="flex flex-col justify-end w-full h-full bg-black bg-opacity-50 text-stone-50 p-4 z-10 absolute top-0 left-0 opacity-100 md:opacity-0 hover:opacity-100 transition-all">
+        <div class="h-20 flex items-center bg-stone-100 dark:bg-stone-800 text-stone-700 dark:text-stone-400 p-4">
             A safe cracking game on iPhone inspired by a Apple Watch game.
         </div>
     </a>
-    <a href="/the-box-timer" class="rounded-xl w-full md:w-[344px] h-[172px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent">
+    <a href="/the-box-timer" class="rounded-md w-full md:w-[344px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent no-underline">
         <img 
             src="/images/theboxtimer.webp"
-            class="object-cover w-full h-full z-0"
+            class="object-cover w-full md:h-[172px]"
             alt="The Impossible Safe - Cover Image"
             title="The Impossible Safe"
 />
-        <div class="flex flex-col justify-end w-full h-full bg-black bg-opacity-50 text-stone-50 p-4 z-10 absolute top-0 left-0 opacity-100 md:opacity-0 hover:opacity-100 transition-all">
-            A workout timer for iPhone that's just a timer and not bloated with other stuff.
+        <div class="h-20 flex items-center bg-stone-100 dark:bg-stone-800 text-stone-700 dark:text-stone-400 p-4">
+            A workout timer that's just a timer and not bloated with other stuff.
         </div>
     </a>
 </div>
+
+<h2>Recent posts</h2><h3 class="my-1">
+        <a href="/writing/you-dont-notice-the-best-product-design-from-IKEA/">You don&#39;t notice the best product design from IKEA</a>
+    </h3>
+    <div class="text-xs mb-4 text-stone-500 dark:text-stone-600">March 7, 2022</div><h3 class="my-1">
+        <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
+    </h3>
+    <div class="text-xs mb-4 text-stone-500 dark:text-stone-600">January 31, 2022</div><h3 class="my-1">
+        <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
+    </h3>
+    <div class="text-xs mb-4 text-stone-500 dark:text-stone-600">July 10, 2021</div>
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-400 dark:border-stone-700 flex flex-col items-center">
   <p class="text-center mb-12 text-stone-400 dark:text-stone-700">
     <a
