--- a/writing/index.html
+++ b/writing/index.html
@@ -54,17 +54,17 @@
             <h2 class="mb-0">
                 <a href="/writing/you-dont-notice-the-best-product-design-from-IKEA/">You don&#39;t notice the best product design from IKEA</a>
             </h2>
-            March 7, 2022
+            <div class="text-stone-500 dark:text-stone-600">March 7, 2022</div>
         </li><li>
             <h2 class="mb-0">
                 <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
             </h2>
-            January 31, 2022
+            <div class="text-stone-500 dark:text-stone-600">January 31, 2022</div>
         </li><li>
             <h2 class="mb-0">
                 <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
             </h2>
-            July 10, 2021
+            <div class="text-stone-500 dark:text-stone-600">July 10, 2021</div>
         </li></ul>
 
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-400 dark:border-stone-700 flex flex-col items-center">
