--- a/writing/you-dont-notice-the-best-product-design-from-IKEA/index.html
+++ b/writing/you-dont-notice-the-best-product-design-from-IKEA/index.html
@@ -70,10 +70,10 @@
 <h2>Continue reading</h2>
 
     <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
-    <div class="text-xs mb-4">January 31, 2022</div>
+    <div class="text-xs mb-4 text-stone-500 dark:text-stone-600">January 31, 2022</div>
 
     <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
-    <div class="text-xs mb-4">July 10, 2021</div>
+    <div class="text-xs mb-4 text-stone-500 dark:text-stone-600">July 10, 2021</div>
 
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-400 dark:border-stone-700 flex flex-col items-center">
   <p class="text-center mb-12 text-stone-400 dark:text-stone-700">
