--- a/writing/what-i-learned-by-launching-my-first-app/index.html
+++ b/writing/what-i-learned-by-launching-my-first-app/index.html
@@ -106,10 +106,10 @@
 <h2>Continue reading</h2>
 
     <a href="/writing/you-dont-notice-the-best-product-design-from-IKEA/">You don&#39;t notice the best product design from IKEA</a>
-    <div class="text-xs mb-4">March 7, 2022</div>
+    <div class="text-xs mb-4 text-stone-500 dark:text-stone-600">March 7, 2022</div>
 
     <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
-    <div class="text-xs mb-4">January 31, 2022</div>
+    <div class="text-xs mb-4 text-stone-500 dark:text-stone-600">January 31, 2022</div>
 
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-400 dark:border-stone-700 flex flex-col items-center">
   <p class="text-center mb-12 text-stone-400 dark:text-stone-700">
