Add killedby.tech to the highlights

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" titl
 
 <div class="flex flex-wrap justify-between items-start">
 
+    <a href="https://killedby.tech?ref=edvinlinden.se" target="_blank" rel="noopener noreferrer" class="rounded-md w-full md:w-[344px] mb-8 overflow-hidden font-light shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent hover:font-light no-underline">
+        <img 
+            src="/images/killedbytech.png"
+            class="object-cover w-full md:h-[172px]"
+            alt="Killed by tech - Cover Image"
+            title="Killed by tech"
+/>
+        <div class="h-20 flex items-center bg-slate-100 dark:bg-slate-800 text-slate-700 dark:text-slate-400 p-4">
+            A list of discontinued products from companies like Google.
+        </div>
+    </a>
+
     <a href="/the-impossible-safe" class="rounded-md w-full md:w-[344px] mb-8 overflow-hidden font-light shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent hover:font-light no-underline">
         <img 
             src="/images/the-impossible-safe-cover.webp"
