--- a/the-box-timer/index.html
+++ b/the-box-timer/index.html
@@ -16,7 +16,7 @@
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "4.8",
-            "ratingCount": "151"
+            "ratingCount": "295"
           },
           "offers": {
             "@type": "Offer",
@@ -181,9 +181,9 @@ Whether you are into functional fitness, weight lifting, stretching of any other
     </div>
     <div class="w-full md:w-[340px] p-6 mb-6 rounded-md bg-slate-300 dark:bg-slate-800">
         <p class="text-slate-900 dark:text-slate-100 italic">
-            Up, down and fixed interval - simple, beautiful
+            This is awesome! So straightforward and minimalistic that it's perfect.
         </p>
-        <span class="text-xs uppercase">Hello_Kittin – Sweden</span>
+        <span class="text-xs uppercase">Brian5711 – United States</span>
     </div>
 </div>
 <h2 class="text-center mt-32 mb-16">Frequently asked questions</h2>
