Add blog post about product kata

--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" titl
 </div>
 
 <h2>Latest writing</h2><h3 class="my-1">
+        <a href="/writing/the-product-kata/">The Product Kata – How to solve the right problems, faster</a>
+    </h3>
+    <div class="text-xs mb-4">July 4, 2022</div><h3 class="my-1">
         <a href="/writing/you-dont-notice-the-best-product-design-from-IKEA/">You don&#39;t notice the best product design from IKEA</a>
     </h3>
     <div class="text-xs mb-4">March 7, 2022</div><h3 class="my-1">
         <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
     </h3>
-    <div class="text-xs mb-4">January 31, 2022</div><h3 class="my-1">
-        <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
-    </h3>
-    <div class="text-xs mb-4">July 10, 2021</div>
+    <div class="text-xs mb-4">January 31, 2022</div>
 <footer class="mt-24 pt-8 border-t-[1px] border-slate-400 dark:border-slate-700 flex flex-col items-center">
   <p class="text-center mb-12 text-slate-400 dark:text-slate-700">
     <a
