--- a/writing/index.html
+++ b/writing/index.html
@@ -52,6 +52,11 @@
   <h1>Things I&#39;ve written</h1>
   <ul><li>
             <h2 class="mb-0">
+                <a href="/writing/the-product-kata/">The Product Kata – How to solve the right problems, faster</a>
+            </h2>
+            July 4, 2022
+        </li><li>
+            <h2 class="mb-0">
                 <a href="/writing/you-dont-notice-the-best-product-design-from-IKEA/">You don&#39;t notice the best product design from IKEA</a>
             </h2>
             March 7, 2022
