--- a/writing/what-i-learned-by-launching-my-first-app/index.html
+++ b/writing/what-i-learned-by-launching-my-first-app/index.html
@@ -105,11 +105,11 @@
 <div class="mx-auto my-16 w-full h-[1px] bg-slate-400 dark:bg-slate-700"></div>
 <h2>Continue reading</h2>
 
+    <a href="/writing/the-product-kata/">The Product Kata – How to solve the right problems, faster</a>
+    <div class="text-xs mb-4">July 4, 2022</div>
+
     <a href="/writing/you-dont-notice-the-best-product-design-from-IKEA/">You don&#39;t notice the best product design from IKEA</a>
     <div class="text-xs mb-4">March 7, 2022</div>
-
-    <a href="/writing/be-polite-say-goodbye/">Be polite, say goodbye!</a>
-    <div class="text-xs mb-4">January 31, 2022</div>
 
 <footer class="mt-24 pt-8 border-t-[1px] border-slate-400 dark:border-slate-700 flex flex-col items-center">
   <p class="text-center mb-12 text-slate-400 dark:text-slate-700">
