Change to boxtimer.app instead of a custom page on edvinlinden.se

--- a/about/index.html
+++ b/about/index.html
@@ -60,12 +60,13 @@
           rel="noopener noreferrer"
           >Get in touch</a>!</p>
 <h3>I write things (sometimes)</h3>
-<p>During 2022 I want to write more, both for myself and others. I am not sure what I will write about, but so far I've written about <a href="/writing/what-i-learned-by-launching-my-first-app/" title="What I learned by launching my first app">making my first app</a> and <a href="/writing/be-polite-say-goodbye/" title="Be polite, say goodbye!">using exit intent popups for a good purpose</a>.</p>
+<p>During 2022 I want to write more, both for myself and others. I am not sure what I will write about, but so far I've written about <a href="/writing/what-i-learned-by-launching-my-first-app/" title="What I learned by launching my first app">making my first app</a>, <a href="/writing/be-polite-say-goodbye/" title="Be polite, say goodbye!">using exit intent popups for a good purpose</a> and <a href="/writing/the-product-kata/" title="The Product Kata – How to solve the right problems, faster">The Product Kata – a framework for solving the right problems</a>.</p>
 <h3>Side projects</h3>
 <p>Spending the work hours talking and thinking about products, but not actually creating them my self, I sometimes have the need to create things my self. Here's some of the things I've done recently.</p>
 <ul class="ml-6 list-disc">
-    <li><a href="/the-box-timer/" title="The Box Timer">The Box Timer - A workout timer for iPhone</a></li>
-    <li><a href="/the-impossible-safe/" title="The Impossible Safe">The Impossible Safe - A safe cracking game for iPhone</a></li>
+    <li><a href="https://boxtimer.app/?ref=edvinlinden.se" target="_blank" rel="noopener noreferrer" title="Box Timer">Box Timer – A workout timer for iPhone</a></li>
+    <li><a href="/the-impossible-safe/" title="The Impossible Safe">The Impossible Safe – A safe cracking game for iPhone</a></li>
+    <li><a href="https://killedby.tech/?ref=edvinlinden.se" target="_blank" title="Killed by Tech">Killed by Tech – A site showcasing discontinued products from companies like Apple, Google and Microsoft.</a></li>
 </ul>
 
 
