--- a/writing/be-polite-say-goodbye/index.html
+++ b/writing/be-polite-say-goodbye/index.html
@@ -54,13 +54,15 @@
     </div>
 </div>
 
-    <h1 class="mb-2 text-center sm:text-left">Be polite, say goodbye!</h1>
-    <div class="mb-8 text-xs text-center sm:text-left">January 31, 2022</div>
-    <p>A few days ago when going through <a href="https://dribbble.com/" target="_blank" rel="noopener noreferrer">dribbble</a> I found <a href="https://www.kshitij.ws/" target="_blank" rel="noopener noreferrer">Kshitij</a>. His site had a feature that has been stuck in my head, he said goodbye when I left his site. I know – 🤯</p>
+    <article>
+        <h1 class="mb-2 text-center sm:text-left"><span>Be polite, say goodbye!</span></h1>
+        <div class="mb-8 text-xs text-center sm:text-left">January 31, 2022</div>
+        <p>A few days ago when going through <a href="https://dribbble.com/" target="_blank" rel="noopener noreferrer">dribbble</a> I found <a href="https://www.kshitij.ws/" target="_blank" rel="noopener noreferrer">Kshitij</a>. His site had a feature that has been stuck in my head, he said goodbye when I left his site. I know – 🤯</p>
 <p>So how did he do it? He used a thing we all hate about the web, the <i>&quot;Subscribe for 10% off your next purchase!&quot;</i> popup. Or as we call it in the industry, an exit intent popup. But he used it with no other purpose than to say goodbye, and that's really nice!</p>
 <p>I've implemented a version of it on my site as well, you can see how it works by moving your mouse outside of the browser window. If you are reading this on a phone, here is a GIF showing it in action.
 <img src="/images/goodbye/goodbye-preview.gif" width="600" height="385" class="my-8 mx-auto shadow-2lg" alt="GIF showing the goodbye feature on exit intent" /></p>
 
+    </article>
 <div class="mx-auto my-16 w-full h-[1px] bg-slate-400 dark:bg-slate-700"></div>
 <h2>Continue reading</h2>
 
