--- a/writing/what-i-learned-by-launching-my-first-app/index.html
+++ b/writing/what-i-learned-by-launching-my-first-app/index.html
@@ -54,9 +54,10 @@
     </div>
 </div>
 
-    <h1 class="mb-2 text-center sm:text-left">What I learned by launching my first app</h1>
-    <div class="mb-8 text-xs text-center sm:text-left">July 10, 2021</div>
-    <p>Ever since I started to learn how to build things for computers I have followed blogs, newsletters and forums where people make incredible <em>things</em>.</p>
+    <article>
+        <h1 class="mb-2 text-center sm:text-left"><span>What I learned by launching my first app</span></h1>
+        <div class="mb-8 text-xs text-center sm:text-left">July 10, 2021</div>
+        <p>Ever since I started to learn how to build things for computers I have followed blogs, newsletters and forums where people make incredible <em>things</em>.</p>
 <p>Some <em>things</em> are just for fun, like Rafael Conde's <a href="http://breakthissafe.com/" target="_blank" rel="noopener noreferrer">Break This Safe</a> that inspired my own game <a href="https://apps.apple.com/us/app/the-impossible-safe/id1573468310" target="_blank" rel="noopener noreferrer">The Impossible Safe</a>, and others are the start of new businesses.</p>
 <p>I've always watched these people with a feeling of &quot;I want to do that, I want to make <em>things</em>&quot;. However this year something changed. It went from feelings to actions to an actual launched app.</p>
 <p>Maybe it was because of COVID or maybe I was tired of starting making <em>things</em> but never completing them, who knows.</p>
@@ -102,6 +103,7 @@
 <p>It's really hard to get people to use your <em>thing</em>! But the feeling you get when they do is amazing.</p>
 <p>Interested in the app I made? It's called <a href="https://apps.apple.com/us/app/the-box-timer/id1547518531">The Box Timer</a></p>
 
+    </article>
 <div class="mx-auto my-16 w-full h-[1px] bg-slate-400 dark:bg-slate-700"></div>
 <h2>Continue reading</h2>
 
