--- a/writing/you-dont-notice-the-best-product-design-from-IKEA/index.html
+++ b/writing/you-dont-notice-the-best-product-design-from-IKEA/index.html
@@ -54,9 +54,10 @@
     </div>
 </div>
 
-    <h1 class="mb-2 text-center sm:text-left">You don&#39;t notice the best product design from IKEA</h1>
-    <div class="mb-8 text-xs text-center sm:text-left">March 7, 2022</div>
-    <p>A few weeks ago I bought a set of <a href="https://www.ikea.com/us/en/p/vidga-glider-with-hook-white-20483002/" target="_blank" rel="noopener noreferrer">Vidga Glider with hook</a>, the exact same as I did a year ago – or so I thought.</p>
+    <article>
+        <h1 class="mb-2 text-center sm:text-left"><span>You don&#39;t notice the best product design from IKEA</span></h1>
+        <div class="mb-8 text-xs text-center sm:text-left">March 7, 2022</div>
+        <p>A few weeks ago I bought a set of <a href="https://www.ikea.com/us/en/p/vidga-glider-with-hook-white-20483002/" target="_blank" rel="noopener noreferrer">Vidga Glider with hook</a>, the exact same as I did a year ago – or so I thought.</p>
 <p>They did the same thing and fit the same Vidga tracks as before, but sometime in the past year or so the design changed. A subtle change but I bet it's quite a big one for IKEA and it's manufacturers.</p>
 <img src="/images/writing/vidga-hooks.png" width="407" height="242" class="mt-8 mb-2 mx-auto shadow-2lg rounded-md" alt="Image of the IKEA Vidga glider with hook" />
 <div class="text-xs text-center italic mb-8">Left: Vidga glider with hook late 2020, right: Vidga glider with hook early 2022.</div>
@@ -66,6 +67,7 @@
 <p>That's what makes it <mark>great product design</mark> and often something that goes unnoticed in todays digital world.</p>
 <p>Making products is complicated and expensive, making them simpler and cheaper without compromising on customer value is something that we all should strive for.</p>
 
+    </article>
 <div class="mx-auto my-16 w-full h-[1px] bg-slate-400 dark:bg-slate-700"></div>
 <h2>Continue reading</h2>
 
