--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" titl
 
 <div class="flex flex-wrap justify-between items-start">
 
-    <a href="https://killedby.tech?ref=edvinlinden.se" target="_blank" rel="noopener noreferrer" class="rounded-md w-full md:w-[344px] mb-8 overflow-hidden font-light shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent hover:font-light no-underline">
+    <a href="https://killedby.tech/?ref=edvinlinden.se" target="_blank" rel="noopener noreferrer" class="rounded-md w-full md:w-[344px] mb-8 overflow-hidden font-light shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent hover:font-light no-underline">
         <img 
             src="/images/killedbytech.png"
             class="object-cover w-full md:h-[172px]"
@@ -81,7 +81,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" titl
             A safe cracking game on iPhone inspired by a Apple Watch game.
         </div>
     </a>
-    <a href="/the-box-timer" class="rounded-md w-full md:w-[344px] mb-8 overflow-hidden font-light shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent hover:font-light no-underline">
+    <a href="https://boxtimer.app/?ref=edvinlinden.se" target="_blank" rel="noopener noreferrer" class="rounded-md w-full md:w-[344px] mb-8 overflow-hidden font-light shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent hover:font-light no-underline">
         <img 
             src="/images/theboxtimer.webp"
             class="object-cover w-full md:h-[172px]"
